Add processing for creating a new task in the renderer and outputting it to the task list

--- a/src/renderer/style.css
+++ b/src/renderer/style.css
@@ -1,6 +1,7 @@
 @import url('./styles/botton.css');
 @import url('./styles/task-container.css');
 @import url('./styles/task-list-container.css');
+@import url('./styles/task-element.css');
 
 * {
 	box-sizing: border-box;
