Configure routing, add Statistics.vue

--- a/src/renderer/style.css
+++ b/src/renderer/style.css
@@ -3,6 +3,7 @@
 @import url('./styles/main-container.css');
 @import url('./styles/task-list.css');
 @import url('./styles/task-list-item.css');
+@import url('./styles/task-info.css');
 
 html,
 body {
